# dental_software

./: CMakeLists.txt  CMakeLists.txt.user.202b070  README.md  agenda.cpp  agenda.h  agenda.ui  agendaView.cpp  agendaView.h  agendaView.ui  appointmentdelegate.cpp  appointmentdelegate.h  db.cpp  db.h  doctorView.ui  main.cpp  mainwindow.cpp  mainwindow.h  patientView.ui  patientview.cpp  patientview.h  untitled_pt_PT.ts
